--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.6",
+    "apollo-client": "^2.6.10",
     "axios": "^0.27.2",
+    "graphql": "^16.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -16,6 +19,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "dotenv": "^16.0.1",
     "vite": "^2.9.9"
   }
 }
