--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "@nextui-org/react": "^1.0.0-beta.7",
     "apollo-client": "^2.6.10",
     "axios": "^0.27.2",
     "graphql": "^16.5.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
