--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 ; VITE_URI_GRAPHQL=http://localhost:4000/
-VITE_URI_GRAPHQL=https://digimon-graphql-api.herokuapp.com/
+; VITE_URI_GRAPHQL=https://digimon-graphql-api.herokuapp.com/
+VITE_URI_GRAPHQL=http://localhost:5000/
