--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "@lottiefiles/lottie-player": "^1.5.7",
     "@nextui-org/react": "^1.0.0-beta.7",
     "apollo-client": "^2.6.10",
     "axios": "^0.27.2",
     "graphql": "^16.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
