--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "vite-plugin-svgr": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
