--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@nextui-org/react": "^1.0.0-beta.7",
     "apollo-client": "^2.6.10",
     "axios": "^0.27.2",
+    "color-thief-react": "^2.1.0",
+    "colorthief": "^2.3.2",
     "graphql": "^16.5.0",
+    "quantize": "^1.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "styled-components": "^5.3.5",
     "vite-plugin-svgr": "^2.1.0"
   },
