--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "vite-plugin-svgr": "^2.1.0"
   },
